<resources>
    <string name="app_name">L03 Bill Please</string>
    <string name="amount_text">Amount</string>
    <string name="num_of_pax_text">Num of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="discount">Discount(%)</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total_bill">Total bill: $</string>
</resources>