<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/amount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_text" />

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TextView
        android:id="@+id/num_of_pax_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax_text" />

    <EditText
        android:id="@+id/num_of_pax_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_svs"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:checked="false"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/toggle_gst"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:checked="true"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />

    </LinearLayout>

    <TextView
        android:id="@+id/discount_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/discount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />


    <RadioGroup
        android:id="@+id/method_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/method_pay_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textSize="11dp"/>

        <RadioButton
            android:id="@+id/method_pay_paynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow"
            android:textSize="11dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/split"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="  "/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset"/>

    </LinearLayout>

    <TextView
        android:id="@+id/total_bill_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/each_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>